Setup 1.0 with security

--- a/ProjectBank/Client/wwwroot/appsettings.json
+++ b/ProjectBank/Client/wwwroot/appsettings.json
@@ -6,7 +6,7 @@
   */
   "AzureAd": {
     "Authority": "https://login.microsoftonline.com/7292a662-f389-4cdc-af79-8898d7e1c1af",
-    "ClientId": "3872b288-31c2-4d9d-bbe1-e4f5842f5d52D",
+    "ClientId": "3872b288-31c2-4d9d-bbe1-e4f5842f5d52",
     "ValidateAuthority": true
   }
 }
