--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,6 @@ on:
   pull_request:
     branches:
       - main
-    paths:
-      - 'ProjectBank/**'
 
 jobs:
   build:
@@ -20,6 +18,7 @@ jobs:
           dotnet-version: 6.0.x
       - name: Install dependencies
         run: dotnet restore
+        working-directory: ProjectBank
       - name: Build
         run: dotnet build --configuration Release --no-restore
       - name: Test
