--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,7 @@ jobs:
         working-directory: ProjectBank
       - name: Build
         run: dotnet build --configuration Release --no-restore
+        working-directory: ProjectBank
       - name: Test
         run: dotnet test --no-restore --verbosity normal
+        working-directory: ProjectBank
