--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,10 @@ jobs:
           dotnet-version: 6.0.x
       - name: Install dependencies
         run: dotnet restore
+        working-directory: ProjectBank
       - name: Build
         run: dotnet build --configuration Release --no-restore
+        working-directory: ProjectBank
       - name: Test
         run: dotnet test --no-restore --verbosity normal
+        working-directory: ProjectBank
