--- a/ProjectBank/Client/ProjectBank.Client.csproj
+++ b/ProjectBank/Client/ProjectBank.Client.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Shared\ProjectBank.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="wwwroot\search(colored).png" />
+  </ItemGroup>
+
 </Project>
