Added ref ProjectBank.Server to ProjectBank.Core

--- a/ProjectBank/Server/ProjectBank.Server.csproj
+++ b/ProjectBank/Server/ProjectBank.Server.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core\ProjectBank.Core.csproj" />
     <ProjectReference Include="..\Client\ProjectBank.Client.csproj" />
     <ProjectReference Include="..\Shared\ProjectBank.Shared.csproj" />
   </ItemGroup>
