- Move server and client to BlazorWebApp - Fix entity relations between Project.cs and Account.cs using fluent - Begin implementation of ProjectRepository.cs - Begin implementation of ProjectRepositoryTests.cs

--- a/ProjectBank/BlazorWebApp/Server/ProjectBank.Server.csproj
+++ b/ProjectBank/BlazorWebApp/Server/ProjectBank.Server.csproj
@@ -17,17 +17,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\ProjectBank.Core.csproj" />
-    <ProjectReference Include="..\Client\ProjectBank.Client.csproj" />
-    <ProjectReference Include="..\Shared\ProjectBank.Shared.csproj" />
-    <ProjectReference Include="..\Infrastructure\ProjectBank.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.0" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.Identity.Web" Version="1.16.0" />
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="1.16.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\ProjectBank.Core.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\ProjectBank.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\Shared\ProjectBank.Shared.csproj" />
+    <ProjectReference Include="..\Client\ProjectBank.Client.csproj" />
   </ItemGroup>
 
 </Project>
