- Try to access api from frontend. Fail - Add roles using guide from lecture. - add Claims.razor for testing

--- a/ProjectBank/Client/ProjectBank.Client.csproj
+++ b/ProjectBank/Client/ProjectBank.Client.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core\ProjectBank.Core.csproj" />
     <ProjectReference Include="..\Shared\ProjectBank.Shared.csproj" />
   </ItemGroup>
 
