Image file related stuff. Component does not work yet. - Adjust dtos - Global usings

--- a/ProjectBank/Server/appsettings.json
+++ b/ProjectBank/Server/appsettings.json
@@ -7,7 +7,7 @@
     "Scopes": "API.Access",
     "CallbackPath": "/signin-oidc"
   },
-  "BlobContainerUri": "https://127.0.0.1:10000/devstoreaccount1/images",//"https://projectbankstorage.blob.core.windows.net/azurecontainer",
+  "BlobContainerUri": "https://projectbankstorage.blob.core.windows.net/azurecontainer",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
