--- a/ProjectBank/Infrastructure/ProjectBank.Infrastructure.csproj
+++ b/ProjectBank/Infrastructure/ProjectBank.Infrastructure.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Core\ProjectBank.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations" />
+  </ItemGroup>
+
 </Project>
