--- a/ProjectBank/Server/ProjectBank.Server.csproj
+++ b/ProjectBank/Server/ProjectBank.Server.csproj
@@ -36,4 +36,8 @@
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="1.21.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data" />
+  </ItemGroup>
+
 </Project>
