--- a/ProjectBank/docker-compose.yml
+++ b/ProjectBank/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3.9'
 
 services:
   db:
-    image: mcr.microsoft.com/mssql/server:2019-latest #mcr.microsoft.com/azure-sql-edg
+    image: mcr.microsoft.com/azure-sql-edge #mcr.microsoft.com/mssql/server:2019-latest
     environment:
       ACCEPT_EULA: 'Y'
       MSSQL_SA_PASSWORD_FILE: /run/secrets/db_password
@@ -41,6 +41,8 @@ services:
     secrets:
       - source: connection_string
         target: ConnectionStrings__ProjectBank
+      - source: storage_key
+        target: StorageAccountKey
     volumes:
       - ../../../.aspnet/https:/https/
 
@@ -49,5 +51,5 @@ secrets:
     file: ../../../.local/db_password.txt
   connection_string:
     file: ../../../.local/connection_string.txt
-  storage_connection_string:
-    file: ../../../.local/storage_connection_string.txt
+  storage_key:
+    file: ../../../.local/storage_key.txt
