Docker compose with variable path for https cert

--- a/ProjectBank/docker-compose.yml
+++ b/ProjectBank/docker-compose.yml
@@ -35,7 +35,9 @@ services:
         target: StorageAccountKey
 
     volumes:
-      - ../../../.aspnet/https:/https/
+      - "${HOME}/.aspnet/https:/https/" #Mac/linux
+      #- %USERPROFILE%\.aspnet\https:/https/ #Windows
+      #- ../../../.aspnet/https:/https/ #Default
 
 secrets:
   db_password:
