--- a/ProjectBank/docker-compose.yml
+++ b/ProjectBank/docker-compose.yml
@@ -35,7 +35,10 @@ services:
         target: StorageAccountKey
 
     volumes:
-      - ../../../.aspnet/https:/https/
+      - "~/.aspnet/https:/https:ro" #Should be cross platform
+      #- "${HOME}/.aspnet/https:/https/" #Mac/linux
+      #- %USERPROFILE%\.aspnet\https:/https/ #Windows
+      #- ../../../.aspnet/https:/https/ #Default. Locate the certificate by going backwards 
 
 secrets:
   db_password:
